--- a/.github/actions/push-image/action.yaml
+++ b/.github/actions/push-image/action.yaml
@@ -48,6 +48,6 @@ runs:
         docker tag "$SRC_IMAGE:$AMD_TAG" "$DST_IMAGE:$AMD_TAG"
         docker tag "$SRC_IMAGE:ARM_TAG" "$DST_IMAGE:ARM_TAG"
         docker push "$DST_IMAGE:$AMD_TAG"
-        docker push "$DST_IMAGE:ARM_TAG"
-        docker manifest create "$DST_IMAGE:TAG" "$DST_IMAGE:$AMD_TAG" "$DST_IMAGE:ARM_TAG"
-        docker manifest push "$DST_IMAGE:TAG"
+        docker push "$DST_IMAGE:$ARM_TAG"
+        docker manifest create "$DST_IMAGE:$TAG" "$DST_IMAGE:$AMD_TAG" "$DST_IMAGE:ARM_TAG"
+        docker manifest push "$DST_IMAGE:$TAG"
